Add codegen datapoint dpaia__spring__petclinic__rest-11
