# src/main/java/org/springframework/samples/petclinic/rest/dto/RotateApiKeyRequestDto.java
@@ -1,0 +1,35 @@
+/*
+ * Copyright 2002-2013 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.springframework.samples.petclinic.rest.dto;
+
+/**
+ * DTO for rotating an API key.
+ *
+ * @author Spring PetClinic Team
+ */
+public class RotateApiKeyRequestDto {
+
+    private Boolean revokeOldKey = true; // Default to true
+
+    public Boolean getRevokeOldKey() {
+        return revokeOldKey;
+    }
+
+    public void setRevokeOldKey(Boolean revokeOldKey) {
+        this.revokeOldKey = revokeOldKey != null ? revokeOldKey : true;
+    }
+}
+
